--- a/genindex.html
+++ b/genindex.html
@@ -141,9 +141,11 @@
 <h2 id="_">_</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="api/competitors.html#elote.competitors.dwz.DWZCompetitor.__init__">__init__() (elote.competitors.dwz.DWZCompetitor method)</a>
+      <li><a href="api/competitors.html#elote.competitors.base.BaseCompetitor.__init__">__init__() (elote.competitors.base.BaseCompetitor method)</a>
 
       <ul>
+        <li><a href="api/competitors.html#elote.competitors.dwz.DWZCompetitor.__init__">(elote.competitors.dwz.DWZCompetitor method)</a>
+</li>
         <li><a href="api/competitors.html#elote.competitors.ecf.ECFCompetitor.__init__">(elote.competitors.ecf.ECFCompetitor method)</a>
 </li>
         <li><a href="api/competitors.html#elote.competitors.elo.EloCompetitor.__init__">(elote.competitors.elo.EloCompetitor method)</a>
