deploy: 82a1101e6f8ceb93ed0dddf44145f7a6892473e5

--- a/_modules/elote/competitors/base.html
+++ b/_modules/elote/competitors/base.html
@@ -123,7 +123,7 @@
 <span></span><span class="kn">import</span><span class="w"> </span><span class="nn">abc</span>
 <span class="kn">import</span><span class="w"> </span><span class="nn">json</span>
 <span class="kn">import</span><span class="w"> </span><span class="nn">uuid</span>
-<span class="kn">from</span><span class="w"> </span><span class="nn">typing</span><span class="w"> </span><span class="kn">import</span> <span class="n">Dict</span><span class="p">,</span> <span class="n">Any</span><span class="p">,</span> <span class="n">TypeVar</span><span class="p">,</span> <span class="n">Type</span><span class="p">,</span> <span class="n">ClassVar</span><span class="p">,</span> <span class="n">List</span>
+<span class="kn">from</span><span class="w"> </span><span class="nn">typing</span><span class="w"> </span><span class="kn">import</span> <span class="n">Dict</span><span class="p">,</span> <span class="n">Any</span><span class="p">,</span> <span class="n">TypeVar</span><span class="p">,</span> <span class="n">Type</span><span class="p">,</span> <span class="n">ClassVar</span><span class="p">,</span> <span class="n">List</span><span class="p">,</span> <span class="n">cast</span>
 
 <span class="kn">from</span><span class="w"> </span><span class="nn">elote.logging</span><span class="w"> </span><span class="kn">import</span> <span class="n">logger</span>
 
@@ -512,54 +512,35 @@
 
 <div class="viewcode-block" id="BaseCompetitor.from_state"><a class="viewcode-back" href="../../../api/competitors.html#elote.competitors.base.BaseCompetitor.from_state">[docs]</a>    <span class="nd">@classmethod</span>
     <span class="k">def</span><span class="w"> </span><span class="nf">from_state</span><span class="p">(</span><span class="bp">cls</span><span class="p">:</span> <span class="n">Type</span><span class="p">[</span><span class="n">T</span><span class="p">],</span> <span class="n">state</span><span class="p">:</span> <span class="n">Dict</span><span class="p">[</span><span class="nb">str</span><span class="p">,</span> <span class="n">Any</span><span class="p">])</span> <span class="o">-&gt;</span> <span class="n">T</span><span class="p">:</span>
-<span class="w">        </span><span class="sd">&quot;&quot;&quot;Create a new competitor from a previously exported state.</span>
-
-<span class="sd">        This method creates a new competitor instance from a previously exported</span>
-<span class="sd">        state dictionary.</span>
+<span class="w">        </span><span class="sd">&quot;&quot;&quot;Create a new competitor from a state dictionary.</span>
 
 <span class="sd">        Args:</span>
-<span class="sd">            state (dict): A dictionary containing the state of a competitor,</span>
-<span class="sd">                         as returned by export_state().</span>
+<span class="sd">            state: A dictionary containing the state of a competitor, including its type and parameters.</span>
 
 <span class="sd">        Returns:</span>
-<span class="sd">            BaseCompetitor: A new competitor with the same state as the exported one.</span>
+<span class="sd">            A new competitor of the same type as the exported one.</span>
 
 <span class="sd">        Raises:</span>
-<span class="sd">            InvalidStateException: If the state dictionary is invalid or incompatible.</span>
-<span class="sd">            InvalidParameterException: If any parameter in the state is invalid.</span>
+<span class="sd">            InvalidStateException: If the state format is invalid or missing required fields.</span>
 <span class="sd">        &quot;&quot;&quot;</span>
-        <span class="c1"># Validate the state dictionary</span>
-        <span class="n">logger</span><span class="o">.</span><span class="n">debug</span><span class="p">(</span><span class="s2">&quot;Creating competitor from state: </span><span class="si">%s</span><span class="s2">&quot;</span><span class="p">,</span> <span class="n">state</span><span class="p">)</span>
-        <span class="k">if</span> <span class="ow">not</span> <span class="nb">isinstance</span><span class="p">(</span><span class="n">state</span><span class="p">,</span> <span class="nb">dict</span><span class="p">):</span>
-            <span class="n">logger</span><span class="o">.</span><span class="n">error</span><span class="p">(</span><span class="s2">&quot;from_state failed: State must be a dictionary, got </span><span class="si">%s</span><span class="s2">&quot;</span><span class="p">,</span> <span class="nb">type</span><span class="p">(</span><span class="n">state</span><span class="p">))</span>
-            <span class="k">raise</span> <span class="n">InvalidStateException</span><span class="p">(</span><span class="s2">&quot;State must be a dictionary&quot;</span><span class="p">)</span>
-
-        <span class="c1"># Check required fields</span>
-        <span class="n">required_fields</span> <span class="o">=</span> <span class="p">[</span><span class="s2">&quot;type&quot;</span><span class="p">,</span> <span class="s2">&quot;version&quot;</span><span class="p">,</span> <span class="s2">&quot;parameters&quot;</span><span class="p">,</span> <span class="s2">&quot;state&quot;</span><span class="p">]</span>
+        <span class="c1"># Validate required fields</span>
+        <span class="n">required_fields</span> <span class="o">=</span> <span class="p">[</span><span class="s2">&quot;type&quot;</span><span class="p">,</span> <span class="s2">&quot;parameters&quot;</span><span class="p">,</span> <span class="s2">&quot;state&quot;</span><span class="p">]</span>
         <span class="k">for</span> <span class="n">field</span> <span class="ow">in</span> <span class="n">required_fields</span><span class="p">:</span>
             <span class="k">if</span> <span class="n">field</span> <span class="ow">not</span> <span class="ow">in</span> <span class="n">state</span><span class="p">:</span>
-                <span class="n">logger</span><span class="o">.</span><span class="n">error</span><span class="p">(</span><span class="s2">&quot;from_state failed: Missing required field &#39;</span><span class="si">%s</span><span class="s2">&#39; in state&quot;</span><span class="p">,</span> <span class="n">field</span><span class="p">)</span>
-                <span class="k">raise</span> <span class="n">InvalidStateException</span><span class="p">(</span><span class="sa">f</span><span class="s2">&quot;Missing required field: </span><span class="si">{</span><span class="n">field</span><span class="si">}</span><span class="s2">&quot;</span><span class="p">)</span>
+                <span class="n">msg</span> <span class="o">=</span> <span class="sa">f</span><span class="s2">&quot;State must contain a &#39;</span><span class="si">{</span><span class="n">field</span><span class="si">}</span><span class="s2">&#39; field&quot;</span>
+                <span class="n">logger</span><span class="o">.</span><span class="n">error</span><span class="p">(</span><span class="n">msg</span><span class="p">)</span>
+                <span class="k">raise</span> <span class="n">InvalidStateException</span><span class="p">(</span><span class="n">msg</span><span class="p">)</span>
 
-        <span class="c1"># Get the competitor class</span>
-        <span class="n">competitor_type</span> <span class="o">=</span> <span class="n">state</span><span class="p">[</span><span class="s2">&quot;type&quot;</span><span class="p">]</span>
-        <span class="n">logger</span><span class="o">.</span><span class="n">debug</span><span class="p">(</span><span class="s2">&quot;Attempting to create competitor of type: </span><span class="si">%s</span><span class="s2">&quot;</span><span class="p">,</span> <span class="n">competitor_type</span><span class="p">)</span>
-        <span class="k">if</span> <span class="n">competitor_type</span> <span class="ow">not</span> <span class="ow">in</span> <span class="n">_competitor_registry</span><span class="p">:</span>
-            <span class="n">logger</span><span class="o">.</span><span class="n">error</span><span class="p">(</span><span class="s2">&quot;from_state failed: Unknown competitor type &#39;</span><span class="si">%s</span><span class="s2">&#39;&quot;</span><span class="p">,</span> <span class="n">competitor_type</span><span class="p">)</span>
-            <span class="k">raise</span> <span class="n">InvalidParameterException</span><span class="p">(</span><span class="sa">f</span><span class="s2">&quot;Unknown competitor type: </span><span class="si">{</span><span class="n">competitor_type</span><span class="si">}</span><span class="s2">&quot;</span><span class="p">)</span>
+        <span class="n">competitor_class</span> <span class="o">=</span> <span class="bp">cls</span><span class="o">.</span><span class="n">get_competitor_class</span><span class="p">(</span><span class="n">state</span><span class="p">[</span><span class="s2">&quot;type&quot;</span><span class="p">])</span>
+        <span class="k">if</span> <span class="n">competitor_class</span> <span class="ow">is</span> <span class="kc">None</span><span class="p">:</span>
+            <span class="n">msg</span> <span class="o">=</span> <span class="sa">f</span><span class="s2">&quot;Unknown competitor type: </span><span class="si">{</span><span class="n">state</span><span class="p">[</span><span class="s1">&#39;type&#39;</span><span class="p">]</span><span class="si">}</span><span class="s2">&quot;</span>
+            <span class="n">logger</span><span class="o">.</span><span class="n">error</span><span class="p">(</span><span class="n">msg</span><span class="p">)</span>
+            <span class="k">raise</span> <span class="n">InvalidStateException</span><span class="p">(</span><span class="n">msg</span><span class="p">)</span>
 
-        <span class="n">competitor_class</span> <span class="o">=</span> <span class="n">_competitor_registry</span><span class="p">[</span><span class="n">competitor_type</span><span class="p">]</span>
-
-        <span class="c1"># Create a new instance using the parameters</span>
-        <span class="n">logger</span><span class="o">.</span><span class="n">debug</span><span class="p">(</span><span class="s2">&quot;Creating new instance of </span><span class="si">%s</span><span class="s2"> using parameters: </span><span class="si">%s</span><span class="s2">&quot;</span><span class="p">,</span> <span class="n">competitor_type</span><span class="p">,</span> <span class="n">state</span><span class="p">[</span><span class="s2">&quot;parameters&quot;</span><span class="p">])</span>
+        <span class="n">logger</span><span class="o">.</span><span class="n">debug</span><span class="p">(</span><span class="sa">f</span><span class="s2">&quot;Creating competitor of type </span><span class="si">{</span><span class="n">state</span><span class="p">[</span><span class="s1">&#39;type&#39;</span><span class="p">]</span><span class="si">}</span><span class="s2"> from state&quot;</span><span class="p">)</span>
         <span class="n">instance</span> <span class="o">=</span> <span class="n">competitor_class</span><span class="o">.</span><span class="n">_create_from_parameters</span><span class="p">(</span><span class="n">state</span><span class="p">[</span><span class="s2">&quot;parameters&quot;</span><span class="p">])</span>
-
-        <span class="c1"># Import the current state</span>
-        <span class="n">logger</span><span class="o">.</span><span class="n">debug</span><span class="p">(</span><span class="s2">&quot;Importing current state into new instance: </span><span class="si">%s</span><span class="s2">&quot;</span><span class="p">,</span> <span class="n">state</span><span class="p">[</span><span class="s2">&quot;state&quot;</span><span class="p">])</span>
         <span class="n">instance</span><span class="o">.</span><span class="n">_import_current_state</span><span class="p">(</span><span class="n">state</span><span class="p">[</span><span class="s2">&quot;state&quot;</span><span class="p">])</span>
-
-        <span class="n">logger</span><span class="o">.</span><span class="n">info</span><span class="p">(</span><span class="s2">&quot;Successfully created competitor </span><span class="si">%s</span><span class="s2"> from state&quot;</span><span class="p">,</span> <span class="n">instance</span><span class="p">)</span>
-        <span class="k">return</span> <span class="n">instance</span></div>
+        <span class="k">return</span> <span class="n">cast</span><span class="p">(</span><span class="n">T</span><span class="p">,</span> <span class="n">instance</span><span class="p">)</span></div>
 
     <span class="nd">@classmethod</span>
     <span class="nd">@abc</span><span class="o">.</span><span class="n">abstractmethod</span>
